playbook: fix disable contrast on button

--- a/partners/ceasc-ascoe/playbook/css/ceasc-styles.scss
+++ b/partners/ceasc-ascoe/playbook/css/ceasc-styles.scss
@@ -130,6 +130,13 @@ h2 {
 	background-color: darken($theme-color, 5);
 }
 
+.list-group-item {
+	
+	&.disabled {
+	color: #000;
+   }
+}
+
 .toc {
 	li {
 		.list-group-item {
